kubernetes/appcicd/infra/kubernetes/02-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
#  namespace: webpages

spec:
  type: NodePort
  ports:
    - protocol: TCP
      name: web
      port: 8000  #Puerto expuesto , recibe desde el load balancer (creo desde el pod de traefik ) . Llega y lo manda al 8000 (targetPort) del nodo
      targetPort: 8000
      nodePort: 30080 #Puerto del contenedor
    - protocol: TCP
      name: admin
      targetPort: 8080
      port: 8080
    - protocol: TCP
      name: websecure
      port: 4443  #Puerto expuesto , recibe desde el load balancer. Llega y lo manda al 4443 (targetPort) del nodo
      targetPort: 4443
      nodePort: 30443 #Puerto del contenedor
  selector:
    app: traefik #Le manda el trafico a los pods que tengan esta etiqueta

---
##Servicio demo. Aqui deberia ir la aplicacion
##Servicio para el WOrdpress
apiVersion: v1
kind: Service
metadata:
  name: app-front
#  namespace: webpages
  labels:
    app: app-front #Buscara los replications controlers, que posean esta etiquita
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80 #Puerto que tendra el contenedor expuesto
  selector:
    app: app-front
    tier: frontend

---
apiVersion: v1
kind: Service
metadata:
  name: app-backend
  labels:
    app: app-backend #Buscara los replications controlers, que posean esta etiquita
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80 #Puerto que tendra el contenedor expuesto
  selector:
    app: app-backend
    tier: backend
